postgres-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    component: postgr-de
spec:
  selector:
    matchLabels:
      component: postgr-de
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%l;kl
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgr-de
  spec:
    volumes:
      - name: postgr-storage
        persistentVolumeClaim:
          claimName: database-persistent-volumes-claim
    containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - name:  postgres-storage
            mountPath:  /var/lib/postgres/data
            subPath: postgres
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: default
spec:
  selector:
    component: postgres-cluster-ip-service
  type: ClusterIP
  ports:
  - name: postgres-cluster-ip-service
    protocol: TCP
    port: 5432
    targetPort: 5432
