server-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  server-deployment
  namespace: default
  labels:
    app:  server-de
spec:
  selector:
    matchLabels:
      app: server-de
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  server-de
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  server-de
        image:  stylerhun/multi-server
        ports:
          - containerPort: 5000
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: default
spec:
  selector:
    app: server-cluster-ip-service
  type: ClusterIP
  ports:
  - name: server-cluster-ip-service
    protocol: TCP
    port: 5000
    targetPort: 5000
